Bug fixes in chartService App will no longer crash when diet is finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="morgenvægt">Morgenvægt</string>
     <string name="error">N/A</string>
     <string name="krop">Krop</string>
+    <string name="done">Diæt Afsluttet</string>
 
     <string name="app_name">Matematisk Vægttab</string>
     <string name="opret_diæt">Opret ny diæt</string>
