Selection menu added and code refactor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="slet_diæet_bekræft">Diæt slettet</string>
     <string name="slet_diæter">Ønsker du at slette alle diæter?</string>
     <string name="slet_diæter_bekræft">Alle diæter slettet</string>
+    <string name="registreret">Indtastning Registreret</string>
     <string name="advarsel">ADVARSEL!</string>
     <string name="ja">Ja</string>
     <string name="nej">Nej</string>
